# skb

./: .gitlab-ci.yml  README.md
SKB-CLI/: .gitignore  Cargo.toml  README.md  rustfmt.toml
SKB-CLI/.config/: nextest.toml
SKB-CLI/src/: env.rs  error.rs  main.rs
SKB-CLI/src/models/: mod.rs  test.rs
SKB-CLI/src/rest_api/: mod.rs
SKB-Server/: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  eclipse-java-google-style.xml  entrypoint.sh  pmd-ruleset.xml  pom.xml
SKB-Server/src/main/java/edu/hm/skb/api/backup/: BackupResource.java  BackupService.java
SKB-Server/src/main/java/edu/hm/skb/api/client/: ClientResource.java
SKB-Server/src/main/java/edu/hm/skb/api/fed/: FedResource.java  FedService.java
SKB-Server/src/main/java/edu/hm/skb/api/security/: HostnameCheck.java  HostnameCheckFilter.java  MTLSService.java  SecurityService.java  SignatureCheckFilter.java  SkbCheckSignature.java
SKB-Server/src/main/java/edu/hm/skb/config/: Config.java  ConfigInjector.java  ConfigInstance.java
SKB-Server/src/main/java/edu/hm/skb/data/: Data.java  DataInstance.java
SKB-Server/src/main/java/edu/hm/skb/util/: JwtUtil.java  WordListBean.java
SKB-Server/src/main/java/edu/hm/skb/util/hash/: HashMethod.java  SHA256.java
SKB-Server/src/main/java/edu/hm/skb/worker/: BackupWorker.java  HealthcheckWorker.java
SKB-Server/src/main/resources/: application.properties
docs/developer/: Block-Struktur.md  REST-API-Definition.md
docs/how-to/: Admin.md  Nutzer.md
docs/project/: Block-Verifikation.md  SKB-Architektur.drawio.xml
(+5 files in other folders)
