[package]
name = "skb-cli"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
env_logger = "0.11.3"
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.30"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
chrono = "0.4.38"
rand = "0.8.5"
base64 = "0.22.1"
openssl = { version = "0.10.64", features = ["vendored"] }
clap = { version = "4.5.8", features = ["default", "derive", "wrap_help"] }
human_bytes = { version = "0.4.3", default-features = false }

[features]
fail-on-warnings = []
